--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^2.3.4",
     "react-addons-test-utils": "^0.14.6",
     "react-hot-loader": "^1.3.0",
+    "sinon": "^1.17.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   }
